data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_710.wast
;; 1. **Loop Execution with `br_if` Conditional Branch**    - Test a loop where the `br_if` condition is based on a stack value pushed by a sequence of instructions that ultimately results in `0`. The branch should not be taken, testing that the loop correctly handles the `br_if` condition.    - **Reason**: Ensures that `br_if` properly checks the top stack value and behaves correctly when the condition fails.

(assert_invalid
  (module
    (type $sig (func))
    (func (loop (result i32) (i32.const 1) (i32.const 0) (br_if 0) (drop)))
  )
  "type mismatch"
)